[gd_scene load_steps=11 format=2]

[ext_resource path="res://EndLevelCoin.gd" type="Script" id=1]
[ext_resource path="res://images/star coin rotate/star_coin_rotate_0.png" type="Texture" id=2]
[ext_resource path="res://images/star coin rotate/star_coin_rotate_1.png" type="Texture" id=3]
[ext_resource path="res://images/star coin rotate/star_coin_rotate_2.png" type="Texture" id=4]
[ext_resource path="res://images/star coin rotate/star_coin_rotate_3.png" type="Texture" id=5]
[ext_resource path="res://images/star coin rotate/star_coin_rotate_4.png" type="Texture" id=6]
[ext_resource path="res://images/star coin rotate/star_coin_rotate_5.png" type="Texture" id=7]
[ext_resource path="res://audio/122255__jivatma07__level-complete.ogg" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "rotate",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 34.9026

[node name="EndLevelCoin" type="Area2D"]
modulate = Color( 1, 0.384314, 0.384314, 1 )
position = Vector2( 166.196, 82.2669 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.819608, 0.788235, 0, 1 )
frames = SubResource( 1 )
animation = "rotate"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="effect" type="Tween" parent="."]

[node name="coinCollect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
[connection signal="body_entered" from="." to="." method="_on_EndLevelCoin_body_entered"]
[connection signal="tween_completed" from="effect" to="." method="_on_effect_tween_completed"]
